# plugin_utils is used by other plugins, build first
SUBDIRS = \
	plugin_utils \
	airspawn \
	autoFlagReset \
	bzfscron \
	chathistory \
	customflagsample \
	CustomZoneSample \
	fairCTF \
	fastmap \
	flagStay \
	hiddenAdmin \
	HoldTheFlag \
	keepaway \
	killall \
	koth \
	logDetail \
	nagware \
	Phoenix \
	playHistoryTracker \
	rabbitTimer \
	rabidRabbit \
	recordmatch \
	regFlag \
	RogueGenocide \
	SAMPLE_PLUGIN \
	serverControl \
	serverSidePlayerSample \
	shockwaveDeath \
	superUser \
	teamflagreset \
	thiefControl \
	timedctf \
	TimeLimit \
	webReport \
	wwzones

DIST_SUBDIRS = \
	$(SUBDIRS)

EXTRA_DIST = \
	addToBuild.sh \
	api_notes \
	pushstats \
	removeFromBuild.sh \
	webStats \
	newplug.sh

MAINTAINERCLEANFILES =	\
	Makefile.in
