# plugin_utils is used by other plugins, build first
SUBDIRS = \
	plugin_utils \
	airspawn \
	autoFlagReset \
	bzfscron \
	chathistory \
	customflagsample \
	customPollTypeSample \
	CustomZoneSample \
	fairCTF \
	fastmap \
	flagStay \
	HoldTheFlag \
	keepaway \
	killall \
	koth \
	logDetail \
	nagware \
	Phoenix \
	playHistoryTracker \
	rabbitTimer \
	rabidRabbit \
	recordmatch \
	regFlag \
	RogueGenocide \
	SAMPLE_PLUGIN \
	serverControl \
	serverSidePlayerSample \
	shockwaveDeath \
	superUser \
	teamflagreset \
	thiefControl \
	timedctf \
	TimeLimit \
	wwzones \
	@CUSTOM_PLUGIN_LIST@

DIST_SUBDIRS = \
	$(SUBDIRS)

EXTRA_DIST = \
	api_notes \
	pushstats \
	newplug.sh

MAINTAINERCLEANFILES =	\
	Makefile.in
