# plugin_utils is used by other plugins, build first
SUBDIRS = \
	plugin_utils \
	airspawn \
	autoFlagReset \
	bzfscron \
	changeTeam \
	chathistory \
	customflagsample \
	customPollTypeSample \
	CustomZoneSample \
	fairCTF \
	flagStay \
	genocide \
	HoldTheFlag \
	keepaway \
	killall \
	koth \
	logDetail \
	nagware \
	Phoenix \
	playHistoryTracker \
	rabbitTimer \
	rabidRabbit \
	recordmatch \
	regFlag \
	R2 \
	SAMPLE_PLUGIN \
	serverControl \
	serverSidePlayerSample \
	shockwaveDeath \
	superUser \
	teamflagreset \
	thiefControl \
	timedctf \
	TimeLimit \
	wwzones \
	@CUSTOM_PLUGIN_LIST@

DIST_SUBDIRS = \
	$(SUBDIRS)

EXTRA_DIST = \
	api_notes \
	premake5.lua \
	pushstats \
	newplug.sh

MAINTAINERCLEANFILES =	\
	Makefile.in
