SUBDIRS = \
	TextTool-W32 \
	bzwtransform \
	modeltool \
	TextTool2


.PHONY : TextTool_W32 bzwtransform modeltool TextTool2

TextTool_W32:
	@cd $@ && $(MAKE) $(AM_MAKEFLAGS)

bzwtransform:
	@cd $@ && $(MAKE) $(AM_MAKEFLAGS)

modeltool:
	@cd $@ && $(MAKE) $(AM_MAKEFLAGS)

TextTool2:
	@cd $@ && $(MAKE) $(AM_MAKEFLAGS)

MAINTAINERCLEANFILES = \
	Makefile.in
