EXTRA_DIST =	\
	bzflag.dsp	\
	bzflag.dsw	\
	bzflag.sln	\
	bzflag.suo	\
	bzflag.vcproj	\
	bzfls.dsp	\
	bzfls.vcproj	\
	bzfrelay.dsp	\
	bzfs.dsp	\
	bzfs.vcproj	\
	bzwtransform.dsp	\
	bzwtransform.vcproj	\
	common.dsp	\
	common.vcproj	\
	geometry.dsp	\
	geometry.vcproj	\
	installer.dsp	\
	makehtml.dsp	\
	man2html.dsp	\
	net.dsp	\
	net.vcproj	\
	obstacle.dsp	\
	obstacle.vcproj	\
	ogl.dsp	\
	ogl.vcproj	\
	platform.dsp	\
	platform.vcproj	\
	scene.dsp	\
	scene.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in
