EXTRA_DIST =	\
	bzflag.sln	\
	ares.vcproj \
	3D.vcproj	\
	bzflag.vcproj	\
	bzadmin.vcproj	\
	bzfs.vcproj	\
	common.vcproj	\
	config.h	\
	date.vcproj	\
	game.vcproj	\
	geometry.vcproj	\
	installer.vcproj	\
	makehtml.vcproj	\
	man2html.vcproj	\
	mediafile.vcproj	\
	net.vcproj	\
	obstacle.vcproj	\
	ogl.vcproj	\
	platform.vcproj	\
	regex.vcproj	\
	scene.vcproj	\
	zlib.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in
