EXTRA_DIST =	\
	3D.vcproj \
	ares.vcproj \
	bzadmin.vcproj \
	bzflag.sln \
	bzflag.vcproj \
	bzfs.sln \
	bzfs.vcproj \
	bzrobots.sln \
	bzrobots.vcproj \
	client.sln \
	common.vcproj \
	config.h \
	date.vcproj \
	game.vcproj \
	geometry.vcproj \
	installer.vcproj \
	libcurl.vcproj \
	makehtml.vcproj \
	man2html.vcproj \
	mediafile.vcproj \
	net.vcproj \
	obstacle.vcproj \
	ogl.vcproj \
	platform.vcproj \
	regex.vcproj \
	scene.vcproj \
	zlib.vcproj

MAINTAINERCLEANFILES = \
	Makefile.in
