fontdir = $(pkgdatadir)/fonts
dist_font_DATA = \
	DejaVu.License \
	DejaVuSansCondensedBold_12.fmt \
	DejaVuSansCondensedBold_12.png \
	DejaVuSansCondensedBold_16.fmt \
	DejaVuSansCondensedBold_16.png \
	DejaVuSansCondensedBold_24.fmt \
	DejaVuSansCondensedBold_24.png \
	DejaVuSansCondensedBold_32.fmt \
	DejaVuSansCondensedBold_32.png \
	DejaVuSansCondensedBold_6.fmt \
	DejaVuSansCondensedBold_6.png \
	DejaVuSansCondensedBold_8.fmt \
	DejaVuSansCondensedBold_8.png \
	DejaVuSansMonoBold_12.fmt \
	DejaVuSansMonoBold_12.png \
	DejaVuSansMonoBold_16.fmt \
	DejaVuSansMonoBold_16.png \
	DejaVuSansMonoBold_6.fmt \
	DejaVuSansMonoBold_6.png \
	DejaVuSansMonoBold_8.fmt \
	DejaVuSansMonoBold_8.png \
	DejaVuSansMonoBold_24.fmt \
	DejaVuSansMonoBold_24.png \
	DejaVuSerifBold_8.fmt \
	DejaVuSerifBold_8.png \
	DejaVuSerifBold_6.fmt \
	DejaVuSerifBold_6.png \
	DejaVuSerifBold_12.fmt \
	DejaVuSerifBold_12.png \
	DejaVuSerifBold_16.fmt \
	DejaVuSerifBold_16.png \
	DejaVuSerifBold_24.fmt \
	DejaVuSerifBold_24.png \
	DejaVuSerifBold_32.fmt \
	DejaVuSerifBold_32.png \
	readme

MAINTAINERCLEANFILES = \
	Makefile.in
