fontdir = $(pkgdatadir)/fonts
dist_font_DATA = \
	DejaVu.License \
	DejaVuSansCondensedBold_6.fmt \
	DejaVuSansCondensedBold_6.png \
	DejaVuSansCondensedBold_8.fmt \
	DejaVuSansCondensedBold_8.png \
	DejaVuSansCondensedBold_12.fmt \
	DejaVuSansCondensedBold_12.png \
	DejaVuSansCondensedBold_16.fmt \
	DejaVuSansCondensedBold_16.png \
	DejaVuSansCondensedBold_24.fmt \
	DejaVuSansCondensedBold_24.png \
	DejaVuSansCondensedBold_32.fmt \
	DejaVuSansCondensedBold_32.png \
	DejaVuSansCondensedBold_48.fmt \
	DejaVuSansCondensedBold_48.png \
	DejaVuSansCondensedBold_64.fmt \
	DejaVuSansCondensedBold_64.png \
	DejaVuSansMonoBold_6.fmt \
	DejaVuSansMonoBold_6.png \
	DejaVuSansMonoBold_8.fmt \
	DejaVuSansMonoBold_8.png \
	DejaVuSansMonoBold_12.fmt \
	DejaVuSansMonoBold_12.png \
	DejaVuSansMonoBold_16.fmt \
	DejaVuSansMonoBold_16.png \
	DejaVuSansMonoBold_24.fmt \
	DejaVuSansMonoBold_24.png \
	DejaVuSansMonoBold_32.fmt \
	DejaVuSansMonoBold_32.png \
	DejaVuSansMonoBold_48.fmt \
	DejaVuSansMonoBold_48.png \
	DejaVuSansMonoBold_64.fmt \
	DejaVuSansMonoBold_64.png \
	DejaVuSerifBold_6.fmt \
	DejaVuSerifBold_6.png \
	DejaVuSerifBold_8.fmt \
	DejaVuSerifBold_8.png \
	DejaVuSerifBold_12.fmt \
	DejaVuSerifBold_12.png \
	DejaVuSerifBold_16.fmt \
	DejaVuSerifBold_16.png \
	DejaVuSerifBold_24.fmt \
	DejaVuSerifBold_24.png \
	DejaVuSerifBold_32.fmt \
	DejaVuSerifBold_32.png \
	DejaVuSerifBold_48.fmt \
	DejaVuSerifBold_48.png \
	DejaVuSerifBold_64.fmt \
	DejaVuSerifBold_64.png \
	readme

MAINTAINERCLEANFILES = \
	Makefile.in
