l10ndir = $(BZFLAG_DATA)/l10n
l10n_DATA = \
	bzflag_cs_CZ.po	\
	bzflag_da.po	\
	bzflag_de.po	\
	bzflag_en_US_l33t.po	\
	bzflag_en_US_redneck.po	\
	bzflag_es.po	\
	bzflag_fr.po	\
	bzflag_it.po	\
	bzflag_kg.po	\
	bzflag_lt.po	\
	bzflag_nl.po	\
	bzflag_pt.po	\
	bzflag_ru.po	\
	bzflag_sv.po	\
	bzflag_xx.po

EXTRA_DIST = \
	$(l10n_DATA) \
	ISO-639-2_values_8bits.txt

MAINTAINERCLEANFILES = \
	Makefile.in
