soundsdir = $(BZFLAG_DATA)/sounds

sounds_DATA = \
	boom.wav		\
	bounce.wav		\
	burrow.wav		\
	explosion.wav		\
	fire.wav		\
	flag_alert.wav		\
	flag_drop.wav		\
	flag_grab.wav		\
	flag_lost.wav		\
	flag_won.wav		\
	flap.wav		\
	hunt.wav		\
	hunt_select.wav		\
	hit.wav			\
	jump.wav		\
	killteam.wav		\
	land.wav		\
	laser.wav		\
	lock.wav		\
	message_admin.wav	\
	message_private.wav	\
	message_team.wav	\
	missile.wav		\
	phantom.wav		\
	pop.wav			\
	ricochet.wav		\
	shock.wav		\
	steamroller.wav		\
	teamgrab.wav		\
	teleport.wav		\
	thief.wav		

EXTRA_DIST = $(sounds_DATA)

MAINTAINERCLEANFILES = \
	Makefile.in
