SUBDIRS = Commands Flags Geometry Installation Tactics
EXTRA_DIST = \
	AdvancedTactics.xml \
	BasicTactics.xml \
	Commands.xml \
	Customizing.xml \
	Ethics.xml \
	Filtering.xml \
	Flags.xml \
	History.xml \
	Installation.xml \
	Introduction.xml \
	Karma.xml \
	NetworkProtocol.xml \
	VotingSystem.xml \
	WorldEditing.xml

MAINTAINERCLEANFILES = \
	Makefile.in
