lib_LTLIBRARIES = HoldTheFlag.la

AM_CPPFLAGS = @CONF_CPPFLAGS@
AM_CXXFLAGS = @CONF_CXXFLAGS@

HoldTheFlag_la_SOURCES = HoldTheFlag.cpp
HoldTheFlag_la_LDFLAGS = -module -avoid-version

EXTRA_DIST = \
	CHANGELOG.txt \
	README.txt \
	HoldTheFlag.def \
	HoldTheFlag.sln \
	HoldTheFlag.vcproj

MAINTAINERCLEANFILES =	\
	Makefile.in
