lib_LTLIBRARIES = RogueGenocide.la

RogueGenocide_la_SOURCES = RogueGenocide.cpp
RogueGenocide_la_CPPFLAGS = -I$(top_srcdir)/include
RogueGenocide_la_LDFLAGS = -module -avoid-version

EXTRA_DIST = \
	ReadMe.txt \
	RogueGenocide.def \
	RogueGenocide.sln \
	RogueGenocide.vcproj

MAINTAINERCLEANFILES =	\
	Makefile.in
